--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>Image-finder</title>
   </head>
   <body>
-    <div class="container">
+    <div class="box">
       <form class="image-input">
         <input
           id="search-form"
@@ -22,13 +22,14 @@
 
         <input id="find-btn" type="submit" class="btn" value="Search" />
       </form>
-    </div>
-    <ul class="gallery"></ul>
 
-    <div class="btn-box">
-      <button type="button" class="btn button" data-action="load-more">
-        <span class="label">Load more</span>
-      </button>
+      <ul class="gallery"></ul>
+
+      <div class="btn-box">
+        <button type="button" class="btn button" data-action="load-more">
+          <span class="label">Load more</span>
+        </button>
+      </div>
     </div>
   </body>
 </html>
